--- a/Transfer_iTraker/inceptionv3_迁移学习.ipynb
+++ b/Transfer_iTraker/inceptionv3_迁移学习.ipynb
@@ -224,82 +224,53 @@
    },
    "outputs": [],
    "source": [
-    "#输入 X: (N,2048)\n",
-    "def model_MLP(x_input,traing):\n",
-    "    drop_rate=0.1\n",
-    "    with tf.variable_scope('layer_1'):\n",
-    "        w=tf.get_variable('weight',shape=[2048,1024],initializer=tf.contrib.layers.xavier_initializer())\n",
-    "        b=tf.get_variable('biases',initializer=tf.constant(0.1,shape=[1024,]))\n",
-    "        y_l1=tf.matmul(x_input,w)+b\n",
-    "        y_l1=tf.layers.batch_normalization(y_l1,training=traing)\n",
-    "        y_l1=tf.nn.relu(y_l1)\n",
-    "    with tf.variable_scope('layer_2'):\n",
-    "        y_l1=tf.nn.dropout(y_l1,drop_rate)\n",
-    "        w=tf.get_variable('weight',shape=[1024,512],initializer=tf.contrib.layers.xavier_initializer())\n",
-    "        b=tf.get_variable('biases',initializer=tf.constant(0.1,shape=[512,]))\n",
-    "        y_l2=tf.matmul(y_l1,w)+b\n",
-    "        y_l2=tf.layers.batch_normalization(y_l2,training=traing)\n",
-    "        y_l2=tf.nn.relu(y_l2)\n",
-    "    with tf.variable_scope('layer_3'):\n",
-    "        y_l2=tf.nn.dropout(y_l2,drop_rate)\n",
-    "        w=tf.get_variable('weight',shape=[512,16],initializer=tf.contrib.layers.xavier_initializer())\n",
-    "        b=tf.get_variable('biases',initializer=tf.constant(0.1,shape=[16,]))\n",
-    "        y_l3=tf.matmul(y_l2,w)+b\n",
-    "    return y_l3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "#输入 X: (N,8,8,2048)\n",
     "def model_cnn(x_input,traing):\n",
     "    drop_rate=0.3\n",
-    "    #conv1 3*3/1 (8,8,2048)->(6,6,2048)\n",
+    "    #conv1 3*3/1 (8,8,2048)->(6,6,1024)\n",
     "    with tf.variable_scope('conv_1'):\n",
-    "        w=tf.get_variable('weight',shape=[3,3,2048,2048],initializer=tf.contrib.layers.xavier_initializer())\n",
-    "        b=tf.get_variable('biases',initializer=tf.constant(0.1,shape=[2048,]))\n",
+    "        w=tf.get_variable('weight',shape=[3,3,2048,1024],initializer=tf.contrib.layers.xavier_initializer())\n",
+    "        b=tf.get_variable('biases',initializer=tf.constant(0.1,shape=[1024,]))\n",
     "        conv_=tf.nn.conv2d(x_input,w,[1,1,1,1],'VALID')+b\n",
     "        conv_=tf.layers.batch_normalization(conv_,training=traing)\n",
     "        conv_=tf.nn.relu(conv_)\n",
-    "    #conv2 3*3/1 (6,6,2048)->(4,4,2048)\n",
+    "    #conv2 3*3/1 (6,6,2048)->(4,4,512)\n",
     "    with tf.variable_scope('conv_2'):\n",
-    "        w=tf.get_variable('weight',shape=[3,3,2048,2048],initializer=tf.contrib.layers.xavier_initializer())\n",
-    "        b=tf.get_variable('biases',initializer=tf.constant(0.1,shape=[2048,]))\n",
+    "        w=tf.get_variable('weight',shape=[3,3,1024,512],initializer=tf.contrib.layers.xavier_initializer())\n",
+    "        b=tf.get_variable('biases',initializer=tf.constant(0.1,shape=[512,]))\n",
     "        conv_=tf.nn.conv2d(conv_,w,[1,1,1,1],'VALID')+b\n",
     "        conv_=tf.layers.batch_normalization(conv_,training=traing)\n",
     "        conv_=tf.nn.relu(conv_)\n",
-    "     #conv3 3*3/1 (4,4,2048)->(2,2,2048)\n",
+    "     #conv3 3*3/1 (4,4,2048)->(2,2,256)\n",
     "    with tf.variable_scope('conv_3'):\n",
-    "        w=tf.get_variable('weight',shape=[3,3,2048,2048],initializer=tf.contrib.layers.xavier_initializer())\n",
-    "        b=tf.get_variable('biases',initializer=tf.constant(0.1,shape=[2048,]))\n",
+    "        w=tf.get_variable('weight',shape=[3,3,512,256],initializer=tf.contrib.layers.xavier_initializer())\n",
+    "        b=tf.get_variable('biases',initializer=tf.constant(0.1,shape=[256,]))\n",
     "        conv_=tf.nn.conv2d(conv_,w,[1,1,1,1],'VALID')+b\n",
     "        conv_=tf.layers.batch_normalization(conv_,training=traing)\n",
     "        conv_=tf.nn.relu(conv_)\n",
     "    #fc4 (N,8192)->(N,2048)\n",
     "    with tf.variable_scope('fc_4'):\n",
-    "        x_flatten=tf.reshape(conv_,shape=[-1,2*2*2048]) # N*256\n",
-    "        w=tf.get_variable('weight',shape=[2*2*2048,2048],initializer=tf.contrib.layers.xavier_initializer())\n",
-    "        b=tf.get_variable('biases',initializer=tf.constant(0.1,shape=[2048,]))\n",
+    "        x_flatten=tf.reshape(conv_,shape=[-1,2*2*256]) # N*256\n",
+    "        w=tf.get_variable('weight',shape=[2*2*256,1024],initializer=tf.contrib.layers.xavier_initializer())\n",
+    "        b=tf.get_variable('biases',initializer=tf.constant(0.1,shape=[1024,]))\n",
     "        y_l1=tf.matmul(x_flatten,w)+b\n",
     "        y_l1=tf.layers.batch_normalization(y_l1,training=traing)\n",
     "        y_l1=tf.nn.relu(y_l1)\n",
     "    #fc5 (N,2048)->(N,1024)\n",
     "    with tf.variable_scope('fc_5'):\n",
     "        y_l1=tf.nn.dropout(y_l1,drop_rate)\n",
-    "        w=tf.get_variable('weight',shape=[2048,1024],initializer=tf.contrib.layers.xavier_initializer())\n",
-    "        b=tf.get_variable('biases',initializer=tf.constant(0.1,shape=[1024,]))\n",
+    "        w=tf.get_variable('weight',shape=[1024,512],initializer=tf.contrib.layers.xavier_initializer())\n",
+    "        b=tf.get_variable('biases',initializer=tf.constant(0.1,shape=[512,]))\n",
     "        y_l2=tf.matmul(y_l1,w)+b\n",
     "        y_l2=tf.layers.batch_normalization(y_l2,training=traing)\n",
     "        y_l2=tf.nn.relu(y_l2)\n",
     "    #fc6 (N,1024)->(N,16)\n",
     "    with tf.variable_scope('fc_6'):\n",
     "        y_l2=tf.nn.dropout(y_l2,drop_rate)\n",
-    "        w=tf.get_variable('weight',shape=[1024,16],initializer=tf.contrib.layers.xavier_initializer())\n",
+    "        w=tf.get_variable('weight',shape=[512,16],initializer=tf.contrib.layers.xavier_initializer())\n",
     "        b=tf.get_variable('biases',initializer=tf.constant(0.1,shape=[16,]))\n",
-    "        y_l3=tf.matmul(y_l2,w)+b\n",
+    "        y_l3=tf.matmul(y_l2,w)\n",
+    "        y_l3=tf.add(y_l3,b,name='y_score')\n",
     "    return y_l3\n",
     "def ReloadData():\n",
     "    index=np.random.choice(range(1,10),2,replace=False)\n",
@@ -319,7 +290,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X=tf.placeholder(tf.float32,[None,8,8,2048])\n",
@@ -328,15 +301,15 @@
     "#\n",
     "y_socre=model_cnn(X,TRAINGING)\n",
     "LOSS=tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(logits=y_socre,labels=Y))\n",
-    "TRAIN=tf.train.AdamOptimizer(1e-4).minimize(LOSS)\n",
+    "TRAIN=tf.train.AdamOptimizer(1e-3).minimize(LOSS)\n",
     "tf.summary.scalar('loss',LOSS)\n",
     "#ACC\n",
     "ACC_C=tf.equal(tf.arg_max(y_socre,1),tf.arg_max(Y,1))\n",
     "ACC=tf.reduce_mean(tf.cast(ACC_C,tf.float32))\n",
     "tf.summary.scalar('Accuracy',ACC)\n",
     "BN_OPS=tf.get_collection(tf.GraphKeys.UPDATE_OPS)\n",
-    "writer_tr=tf.summary.FileWriter('./mylog/CNN/train')\n",
-    "writer_te=tf.summary.FileWriter('./mylog/CNN/test')"
+    "writer_tr=tf.summary.FileWriter('./mylog/CNN_small/train')\n",
+    "writer_te=tf.summary.FileWriter('./mylog/CNN_small/test')"
    ]
   },
   {
@@ -391,12 +364,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
     "#1k 大概25min\n",
-    "for i in range(1000*10,1000*10+1000*10*4):\n",
+    "for i in range(1,1000*10):\n",
     "    if i%1000==0:\n",
     "        print('change traing data')\n",
     "        del tr_data\n",
@@ -422,7 +396,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "acc_sum=0\n",
@@ -436,7 +412,54 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "X=tf.placeholder(tf.float32,[None,8,8,2048])\n",
+    "TRAINGING=tf.placeholder(tf.bool)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x_=te_data[0].reshape((1,8,8,2048))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x_.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "sess.run(y_score,{X:x_,TRAINGING:False})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "acc_sum/10"
@@ -445,18 +468,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#保存\n",
     "saver=tf.train.Saver()\n",
-    "saver.save(sess,'./model_save/inception_pool3_cnn/modelacc_94``'+'.ckpt',global_step=i)"
+    "saver.save(sess,'./model_save/inception_pool3_smallcnn/modelacc_85'+'.ckpt',global_step=i)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#复原\n",
@@ -475,6 +502,31 @@
    "source": [
     "/***************************************************\n",
     "测试"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "saver=tf.train.import_meta_graph('./model_save/inception_pool3_smallcnn/modelacc_85.ckpt-993.meta')\n",
+    "saver.restore(sess,'./model_save/inception_pool3_smallcnn/modelacc_85.ckpt-993')\n",
+    "graph=tf.get_default_graph()\n",
+    "# y_score=graph.get_operation_by_name('fc_6/y_score')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "y_score=graph.get_tensor_by_name('fc_6/y_score:0')"
    ]
   },
   {
@@ -606,7 +658,7 @@
    },
    "outputs": [],
    "source": [
-    "prob=tf.nn.softmax(y_socre)\n",
+    "prob=tf.nn.softmax(y_score)\n",
     "guess=tf.arg_max(prob,1)"
    ]
   },
@@ -629,6 +681,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
