--- a/Transfer_iTraker/inceptionv3迁移学习_校正.ipynb
+++ b/Transfer_iTraker/inceptionv3迁移学习_校正.ipynb
@@ -8,15 +8,11 @@
    },
    "outputs": [],
    "source": [
-    "import tensorflow as tf\n",
-    "import numpy as np\n",
-    "from tensorflow.python.platform import gfile\n",
-    "import os\n",
-    "import time\n",
-    "import cv2\n",
-    "import pickle\n",
-    "sess=tf.InteractiveSession()\n",
-    "#face_img=np.load('face_10k.npy')"
+    "'''\n",
+    "2017年10月26日：\n",
+    "    1.校正：没有起作用，主要问题在于训练时间长，效果差\n",
+    "    2：将分类问题转换成回归问题，这样能使得即使预测错误，结果也尽可能靠近实际点\n",
+    "'''"
    ]
   },
   {
@@ -27,12 +23,16 @@
    },
    "outputs": [],
    "source": [
-    "/******************************************************************************\n",
-    "1.读取图片\n",
-    "2.提取脸部图片\n",
-    "3.将脸部图片输入到Inception--V3模型中提取特征\n",
-    "4.保存特征\n",
-    "/******************************************************************************"
+    "import tensorflow as tf\n",
+    "import numpy as np\n",
+    "from tensorflow.python.platform import gfile\n",
+    "import os\n",
+    "import time\n",
+    "import cv2\n",
+    "import pickle\n",
+    "import interface\n",
+    "sess=tf.InteractiveSession()\n",
+    "#face_img=np.load('face_10k.npy')"
    ]
   },
   {
@@ -67,7 +67,7 @@
     "            eye_mat=[]\n",
     "\n",
     "        return  (img,face_mat,eye_mat)\n",
-    "file_root=r'D:\\Proj_DL\\Code\\Proj_EyeTraker\\Proj_iTraker\\MIT_iTraker\\calimg_file_num'\n",
+    "file_root='calimg_file_val'\n",
     "img_names=os.listdir(file_root)\n",
     "#打乱顺序\n",
     "index=np.arange(len(img_names))\n",
@@ -83,6 +83,7 @@
    },
    "outputs": [],
    "source": [
+    "#加载 inception 模型\n",
     "#输出\n",
     "BOTTLE_NECK='pool_3/_reshape:0'\n",
     "#jpg 二进制输入\n",
@@ -91,17 +92,7 @@
     "MAT_INPUT='ExpandDims:0'\n",
     "#最后一个池化层的输入\n",
     "POOL_3='mixed_10/join:0'\n",
-    "MODEL_DIR='inceptionv3_model/tensorflow_inception_graph.pb'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "MODEL_DIR='inceptionv3_model/tensorflow_inception_graph.pb'\n",
     "with gfile.FastGFile(MODEL_DIR,'rb') as f:\n",
     "    graph_def=tf.GraphDef()\n",
     "    graph_def.ParseFromString(f.read())\n",
@@ -139,42 +130,7 @@
     "    face_matrix.append(fea_.astype('float32'))\n",
     "    if i%100==0:\n",
     "        print('pic:{},fail count:{},run time:{}'.format(i,fail_counter,time.time()-s_time))\n",
-    "       # s_time=time.time()\n",
-    "    if (i%5000==0)and (i !=0):\n",
-    "        file_index+=1\n",
-    "        file_name='feature50k_pool3_'+str(file_index)+r'_.pkl'\n",
-    "        fp=open(os.path.join(r'Feature_File/',file_name),'wb')\n",
-    "        face_matrix=np.array(face_matrix).astype('float32')\n",
-    "        y_cordinate=np.array(y_cordinate).astype('uint8')\n",
-    "        pickle.dump(obj={'feature':face_matrix,'label':y_cordinate},file=fp)\n",
-    "        fp.close()\n",
-    "        y_cordinate=[]\n",
-    "        face_matrix=[]\n",
-    "        print('file save')\n",
-    "        #break\n",
-    "\n",
-    "#y_cordinate=np.array(y_cordinate).astype('uint8')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "face_matrix=np.array(face_matrix).astype('float32').reshape((-1,2048))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
+    "face_matrix=np.array(face_matrix).astype('float32').reshape((-1,8,8,2048))\n",
     "y_cordinate=np.array(y_cordinate).astype('uint8')"
    ]
   },
@@ -186,7 +142,7 @@
    },
    "outputs": [],
    "source": [
-    "import pickle"
+    "d=np.load('Feature_File/fea_validate65k.pkl')"
    ]
   },
   {
@@ -197,10 +153,7 @@
    },
    "outputs": [],
    "source": [
-    "fp=open('inception_10k.pkl','wb')\n",
-    "d={'feature':face_matrix,'label':y_cordinate}\n",
-    "pickle.dump(file=fp,obj=d)\n",
-    "fp.close()"
+    "d['label'].shape"
    ]
   },
   {
@@ -212,7 +165,7 @@
    "outputs": [],
    "source": [
     "/*******************************************************************************************\n",
-    "训练MLP进行分类\n",
+    "训练CNN进行分类\n",
     "/*******************************************************************************************"
    ]
   },
@@ -224,81 +177,59 @@
    },
    "outputs": [],
    "source": [
-    "#输入 X: (N,2048)\n",
-    "def model_MLP(x_input,traing):\n",
-    "    drop_rate=0.1\n",
-    "    with tf.variable_scope('layer_1'):\n",
-    "        w=tf.get_variable('weight',shape=[2048,1024],initializer=tf.contrib.layers.xavier_initializer())\n",
-    "        b=tf.get_variable('biases',initializer=tf.constant(0.1,shape=[1024,]))\n",
-    "        y_l1=tf.matmul(x_input,w)+b\n",
-    "        y_l1=tf.layers.batch_normalization(y_l1,training=traing)\n",
-    "        y_l1=tf.nn.relu(y_l1)\n",
-    "    with tf.variable_scope('layer_2'):\n",
-    "        y_l1=tf.nn.dropout(y_l1,drop_rate)\n",
-    "        w=tf.get_variable('weight',shape=[1024,512],initializer=tf.contrib.layers.xavier_initializer())\n",
-    "        b=tf.get_variable('biases',initializer=tf.constant(0.1,shape=[512,]))\n",
-    "        y_l2=tf.matmul(y_l1,w)+b\n",
-    "        y_l2=tf.layers.batch_normalization(y_l2,training=traing)\n",
-    "        y_l2=tf.nn.relu(y_l2)\n",
-    "    with tf.variable_scope('layer_3'):\n",
-    "        y_l2=tf.nn.dropout(y_l2,drop_rate)\n",
-    "        w=tf.get_variable('weight',shape=[512,16],initializer=tf.contrib.layers.xavier_initializer())\n",
-    "        b=tf.get_variable('biases',initializer=tf.constant(0.1,shape=[16,]))\n",
-    "        y_l3=tf.matmul(y_l2,w)+b\n",
-    "    return y_l3"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "def conver_id2xy(y_mat):\n",
+    "    y_xy=[]\n",
+    "    for l in y_mat:\n",
+    "        id_=np.argmax(l)\n",
+    "        x_,y_=id_%4,id_//4\n",
+    "        y_xy.append((x_,y_))\n",
+    "    return np.array(y_xy)\n",
     "#输入 X: (N,8,8,2048)\n",
     "def model_cnn(x_input,traing):\n",
+    "    trainable_=False\n",
     "    drop_rate=0.3\n",
     "    #conv1 3*3/1 (8,8,2048)->(6,6,2048)\n",
     "    with tf.variable_scope('conv_1'):\n",
-    "        w=tf.get_variable('weight',shape=[3,3,2048,2048],initializer=tf.contrib.layers.xavier_initializer())\n",
-    "        b=tf.get_variable('biases',initializer=tf.constant(0.1,shape=[2048,]))\n",
+    "        w=tf.get_variable('weight',shape=[3,3,2048,2048],initializer=tf.contrib.layers.xavier_initializer(),trainable=trainable_)\n",
+    "        b=tf.get_variable('biases',initializer=tf.constant(0.1,shape=[2048,]),trainable=trainable_)\n",
     "        conv_=tf.nn.conv2d(x_input,w,[1,1,1,1],'VALID')+b\n",
     "        conv_=tf.layers.batch_normalization(conv_,training=traing)\n",
     "        conv_=tf.nn.relu(conv_)\n",
     "    #conv2 3*3/1 (6,6,2048)->(4,4,2048)\n",
     "    with tf.variable_scope('conv_2'):\n",
-    "        w=tf.get_variable('weight',shape=[3,3,2048,2048],initializer=tf.contrib.layers.xavier_initializer())\n",
-    "        b=tf.get_variable('biases',initializer=tf.constant(0.1,shape=[2048,]))\n",
+    "        w=tf.get_variable('weight',shape=[3,3,2048,2048],initializer=tf.contrib.layers.xavier_initializer(),trainable=trainable_)\n",
+    "        b=tf.get_variable('biases',initializer=tf.constant(0.1,shape=[2048,]),trainable=trainable_)\n",
     "        conv_=tf.nn.conv2d(conv_,w,[1,1,1,1],'VALID')+b\n",
     "        conv_=tf.layers.batch_normalization(conv_,training=traing)\n",
     "        conv_=tf.nn.relu(conv_)\n",
     "     #conv3 3*3/1 (4,4,2048)->(2,2,2048)\n",
     "    with tf.variable_scope('conv_3'):\n",
-    "        w=tf.get_variable('weight',shape=[3,3,2048,2048],initializer=tf.contrib.layers.xavier_initializer())\n",
-    "        b=tf.get_variable('biases',initializer=tf.constant(0.1,shape=[2048,]))\n",
+    "        w=tf.get_variable('weight',shape=[3,3,2048,2048],initializer=tf.contrib.layers.xavier_initializer(),trainable=trainable_)\n",
+    "        b=tf.get_variable('biases',initializer=tf.constant(0.1,shape=[2048,]),trainable=trainable_)\n",
     "        conv_=tf.nn.conv2d(conv_,w,[1,1,1,1],'VALID')+b\n",
     "        conv_=tf.layers.batch_normalization(conv_,training=traing)\n",
     "        conv_=tf.nn.relu(conv_)\n",
     "    #fc4 (N,8192)->(N,2048)\n",
     "    with tf.variable_scope('fc_4'):\n",
     "        x_flatten=tf.reshape(conv_,shape=[-1,2*2*2048]) # N*256\n",
-    "        w=tf.get_variable('weight',shape=[2*2*2048,2048],initializer=tf.contrib.layers.xavier_initializer())\n",
-    "        b=tf.get_variable('biases',initializer=tf.constant(0.1,shape=[2048,]))\n",
+    "        w=tf.get_variable('weight',shape=[2*2*2048,2048],initializer=tf.contrib.layers.xavier_initializer(),trainable=trainable_)\n",
+    "        b=tf.get_variable('biases',initializer=tf.constant(0.1,shape=[2048,]),trainable=trainable_)\n",
     "        y_l1=tf.matmul(x_flatten,w)+b\n",
     "        y_l1=tf.layers.batch_normalization(y_l1,training=traing)\n",
     "        y_l1=tf.nn.relu(y_l1)\n",
     "    #fc5 (N,2048)->(N,1024)\n",
     "    with tf.variable_scope('fc_5'):\n",
     "        y_l1=tf.nn.dropout(y_l1,drop_rate)\n",
-    "        w=tf.get_variable('weight',shape=[2048,1024],initializer=tf.contrib.layers.xavier_initializer())\n",
-    "        b=tf.get_variable('biases',initializer=tf.constant(0.1,shape=[1024,]))\n",
+    "        w=tf.get_variable('weight',shape=[2048,1024],initializer=tf.contrib.layers.xavier_initializer(),trainable=trainable_)\n",
+    "        b=tf.get_variable('biases',initializer=tf.constant(0.1,shape=[1024,]),trainable=trainable_)\n",
     "        y_l2=tf.matmul(y_l1,w)+b\n",
     "        y_l2=tf.layers.batch_normalization(y_l2,training=traing)\n",
     "        y_l2=tf.nn.relu(y_l2)\n",
     "    #fc6 (N,1024)->(N,16)\n",
     "    with tf.variable_scope('fc_6'):\n",
     "        y_l2=tf.nn.dropout(y_l2,drop_rate)\n",
-    "        w=tf.get_variable('weight',shape=[1024,16],initializer=tf.contrib.layers.xavier_initializer())\n",
-    "        b=tf.get_variable('biases',initializer=tf.constant(0.1,shape=[16,]))\n",
+    "        w=tf.get_variable('weight',shape=[1024,2],initializer=tf.contrib.layers.xavier_initializer())\n",
+    "        b=tf.get_variable('biases',initializer=tf.constant(0.1,shape=[2,]))\n",
     "        y_l3=tf.matmul(y_l2,w)+b\n",
     "    return y_l3\n",
     "def ReloadData():\n",
@@ -313,64 +244,34 @@
     "    f_=d['feature'].reshape((d['feature'].shape[0],d['feature'].shape[2],d['feature'].shape[3],d['feature'].shape[4],))\n",
     "    fea_data=np.concatenate((fea_data,f_),axis=0)\n",
     "    fea_label=np.concatenate((fea_label,d['label']),axis=0)\n",
+    "    #将id 装换成 坐标\n",
+    "    fea_label=conver_id2xy(fea_label)\n",
     "    return fea_data,fea_label"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X=tf.placeholder(tf.float32,[None,8,8,2048])\n",
-    "Y=tf.placeholder(tf.float32,[None,16])\n",
+    "Y=tf.placeholder(tf.float32,[None,2])\n",
     "TRAINGING=tf.placeholder(tf.bool)\n",
     "#\n",
     "y_socre=model_cnn(X,TRAINGING)\n",
-    "LOSS=tf.reduce_mean(tf.nn.softmax_cross_entropy_with_logits(logits=y_socre,labels=Y))\n",
-    "TRAIN=tf.train.AdamOptimizer(1e-4).minimize(LOSS)\n",
-    "tf.summary.scalar('loss',LOSS)\n",
+    "\n",
+    "Loss=(tf.losses.mean_squared_error(Y,y_socre))\n",
+    "tf.summary.scalar('loss',Loss)\n",
+    "ERR=tf.reduce_mean(tf.sqrt(tf.reduce_sum(tf.squared_difference(y_socre, Y), axis=1)))\n",
+    "tf.summary.scalar('err',ERR)\n",
+    "TRAIN=tf.train.AdamOptimizer(1e-3).minimize(Loss)\n",
     "#ACC\n",
-    "ACC_C=tf.equal(tf.arg_max(y_socre,1),tf.arg_max(Y,1))\n",
-    "ACC=tf.reduce_mean(tf.cast(ACC_C,tf.float32))\n",
-    "tf.summary.scalar('Accuracy',ACC)\n",
     "BN_OPS=tf.get_collection(tf.GraphKeys.UPDATE_OPS)\n",
-    "writer_tr=tf.summary.FileWriter('./mylog/CNN/train')\n",
-    "writer_te=tf.summary.FileWriter('./mylog/CNN/test')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# fea_mat=d['feature'].reshape((-1,2048))\n",
-    "# y_label=d['label']\n",
-    "# fea_mat=feature_data\n",
-    "# y_label=label_data\n",
-    "# index=np.arange(fea_mat.shape[0])\n",
-    "# np.random.shuffle(index)\n",
-    "# tr_index=index[:int(fea_mat.shape[0]*0.8)]\n",
-    "# te_index=index[int(fea_mat.shape[0]*0.8):]\n",
-    "# tr_data=fea_mat[tr_index]\n",
-    "# te_data=fea_mat[te_index]\n",
-    "# tr_label=y_label[tr_index]\n",
-    "# te_label=y_label[te_index]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "merge=tf.summary.merge_all()\n",
-    "init=sess.run(tf.global_variables_initializer())"
+    "writer_tr=tf.summary.FileWriter('./mylog/CNN_err_big/train')\n",
+    "writer_te=tf.summary.FileWriter('./mylog/CNN_err_big/test')"
    ]
   },
   {
@@ -382,7 +283,7 @@
    "outputs": [],
    "source": [
     "d=np.load('Feature_File/fea_validate65k.pkl')\n",
-    "te_data,te_label=d['feature'],d['label']\n",
+    "te_data,te_label=d['feature'],conver_id2xy(d['label'])\n",
     "del d\n",
     "tr_data,tr_label=ReloadData()"
    ]
@@ -391,12 +292,26 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "\n",
+    "init=sess.run(tf.global_variables_initializer())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "#1k 大概25min\n",
-    "for i in range(1000*10,1000*10+1000*10*4):\n",
+    "merge=tf.summary.merge_all()\n",
+    "#100 大概1min\n",
+    "for i in range(1,1000*1000):\n",
     "    if i%1000==0:\n",
     "        print('change traing data')\n",
     "        del tr_data\n",
@@ -407,62 +322,43 @@
     "    sess.run([TRAIN,BN_OPS],{X:x_,Y:y_,TRAINGING:True })\n",
     "                  \n",
     "    if i%10==0:\n",
-    "        loss_,acc_,m_,_=sess.run([LOSS,ACC,merge,BN_OPS],{X:x_,Y:y_,TRAINGING:True})\n",
+    "        loss_,acc_,m_,_=sess.run([Loss,ERR,merge,BN_OPS],{X:x_,Y:y_,TRAINGING:True})\n",
     "        writer_tr.add_summary(m_,i)\n",
-    "        print('epoch:{},loss:{},accuracy:{}'.format(i,loss_,acc_))\n",
+    "        print('epoch:{},loss:{},err:{}'.format(i,loss_,acc_))\n",
     "    if i%20==0:\n",
     "        mask=np.random.choice(range(te_data.shape[0]),256,replace=False)\n",
     "        x_,y_=te_data[mask],te_label[mask]\n",
-    "        loss_,acc_,m_,_=sess.run([LOSS,ACC,merge,BN_OPS],{X:x_,Y:y_,TRAINGING:True})\n",
+    "        loss_,acc_,m_,_=sess.run([Loss,ERR,merge,BN_OPS],{X:x_,Y:y_,TRAINGING:True})\n",
     "        writer_te.add_summary(m_,i)\n",
-    "        print('--epoch:{},loss:{},accuracy:{}'.format(i,loss_,acc_))\n",
+    "        print('--epoch:{},loss:{},err:{}'.format(i,loss_,acc_))\n",
     "                   "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "acc_sum=0\n",
-    "for j_ in range(10):\n",
-    "    mask=np.random.choice(range(te_data.shape[0]),300,replace=False)\n",
-    "    x_,y_=te_data[mask],te_label[mask]\n",
-    "    loss_,acc_,m_,_=sess.run([LOSS,ACC,merge,BN_OPS],{X:x_,Y:y_,TRAINGING:False})\n",
-    "    acc_sum+=acc_"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "acc_sum/10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#保存\n",
     "saver=tf.train.Saver()\n",
-    "saver.save(sess,'./model_save/inception_pool3_cnn/modelacc_94``'+'.ckpt',global_step=i)"
+    "saver.save(sess,'./model_save/inception_err/bigmodelerr058'+'.ckpt',global_step=i)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#复原\n",
-    "#saver.restore(sess,'./model_save/model_mit_cal_1017/model_conv310192042.ckpt-23708')\n",
+    "\n",
     "saver=tf.train.Saver()\n",
-    "saver.restore(sess,'./model_save/inception_pool3_cnn/modelacc_90.ckpt-9999')"
+    "saver.restore(sess,'./model_save/inception_err/modelerr066.ckpt-11999')"
    ]
   },
   {
@@ -606,33 +502,25 @@
    },
    "outputs": [],
    "source": [
-    "prob=tf.nn.softmax(y_socre)\n",
-    "guess=tf.arg_max(prob,1)"
+    "#分类\n",
+    "#prob=tf.nn.softmax(y_socre)\n",
+    "#guess=tf.arg_max(prob,1)\n",
+    "#回归"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "fps=10\n",
-    "\n",
-    "fsize_desk=(1920,1080)\n",
-    "# save video\n",
-    "video_d=cv2.VideoWriter('demo_desk.flv',cv2.VideoWriter_fourcc('F','L','V','1'),fps,fsize_desk)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
    "source": [
+    "fps=10\n",
+    "fsize_desk=(1920,1080)\n",
+    "# save video\n",
+    "video_d=cv2.VideoWriter('demo_desk.flv',cv2.VideoWriter_fourcc('F','L','V','1'),fps,fsize_desk)\n",
     "cap=cv2.VideoCapture(0)\n",
     "s_time=time.time()\n",
     "tar_img=cv2.imread('test.jpg')\n",
@@ -666,20 +554,22 @@
     "        f=f.reshape((1,f.shape[0],f.shape[1],f.shape[2]))\n",
     "        fea_=sess.run(feature_bottleneck,{jpeg_tensor:f})\n",
     "       \n",
-    "        guess_=sess.run(guess,feed_dict={X:fea_,TRAINGING:False})\n",
-    "        if frame_counter==1:\n",
-    "            frame_counter=0\n",
-    "            max_count=0\n",
-    "            for k in frame_counter_dict:\n",
-    "                if frame_counter_dict[k]>max_count:\n",
-    "                    block_16id=k\n",
-    "                    max_count=frame_counter_dict[k]\n",
-    "            frame_counter_dict={}\n",
-    "        else:\n",
-    "            frame_counter+=1\n",
-    "            frame_counter_dict[guess_[0]]=frame_counter_dict.get(guess_[0],0)+1\n",
+    "        y_guess=sess.run(y_socre,feed_dict={X:fea_,TRAINGING:False})[0]\n",
+    "        block_id=4*int(y_guess[1])+int(y_guess[0])\n",
     "        \n",
-    "        tar_img=drawblock(tar_img,line_num=4,block_id=block_16id,show_rec=False)\n",
+    "#         if frame_counter==1:\n",
+    "#             frame_counter=0\n",
+    "#             max_count=0\n",
+    "#             for k in frame_counter_dict:\n",
+    "#                 if frame_counter_dict[k]>max_count:\n",
+    "#                     block_16id=k\n",
+    "#                                             max_count=frame_counter_dict[k]\n",
+    "#             frame_counter_dict={}\n",
+    "#         else:\n",
+    "#             frame_counter+=1\n",
+    "#             frame_counter_dict[guess_[0]]=frame_counter_dict.get(guess_[0],0)+1\n",
+    "        \n",
+    "        tar_img=drawblock(tar_img,line_num=4,block_id=block_id,show_rec=False)\n",
     "        v_img=tar_img.copy()\n",
     "        v_img[:480,1280:]=fram\n",
     "        cv2.imshow('Capture001',tar_img)\n",
@@ -727,5 +617,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 1
 }
