--- a/Transfer_iTraker/inceptionv3迁移学习_eyeandface.ipynb
+++ b/Transfer_iTraker/inceptionv3迁移学习_eyeandface.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -45,9 +45,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1184\n"
+     ]
+    }
+   ],
    "source": [
     "def drew_face_eye(img,show_reg=True):\n",
     "        '''\n",
@@ -86,7 +94,7 @@
     "            else:\n",
     "                ey=eyes[0][1]\n",
     "                H=eyes[1][1]-eyes[0][1]+eyes[1][3]\n",
-    "            eye_mat=roi_color[ey-5:ey+H+5,ex-5:ex+W+5]\n",
+    "            eye_mat=roi_color[ey:ey+H,ex:ex+W]\n",
     "        return  (img,face_mat,eye_mat)\n",
     "file_root=r'D:/Proj_DL/Code/Proj_EyeTraker/Proj_iTraker/Transfer_iTraker/img4X4_val/'\n",
     "img_names=os.listdir(file_root)\n",
@@ -106,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -141,6 +149,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -193,7 +202,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "face_matrix.shape"
@@ -219,6 +230,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -244,7 +256,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "fea_mat.shape"
@@ -390,7 +404,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "d=np.load('vgg19_feature.pkl')\n",
@@ -402,7 +418,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "X=tf.placeholder(tf.float32,[None,7*7*512])\n",
@@ -433,6 +451,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -450,7 +469,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "te_data.shape,tr_data.shape"
@@ -472,6 +493,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -511,7 +533,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "plt.plot(vacc_his,label='val')\n",
@@ -903,7 +927,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "Images=tf.placeholder(tf.float32,[None,224,224,3])\n",
@@ -916,7 +942,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "y_cordinate=[]\n",
@@ -981,7 +1009,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "face_matrix.shape"
@@ -1003,7 +1033,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "s=0\n",
@@ -1017,6 +1049,74 @@
     "    eye_lis.append(fea_e)\n",
     "    print(s)\n",
     "    s=i+10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "a_=np.array([8]*8*8*10).reshape((1,8,8,10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1  8  8 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a=tf.constant(a_)\n",
+    "print(tf.shape(a).eval())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p=tf.nn.max_pool(a,ksize=[1,8,8,1],strides=[1,1,1,1],padding='SAME')\n",
+    "#ps=tf.squeeze(p,[1,2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "p_=sess.run(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1, 8, 8, 10)"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "p_.shape"
    ]
   }
  ],
@@ -1036,7 +1136,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "version": "3.5.3"
   }
  },
  "nbformat": 4,
