--- a/CUMT_iTraker/squeezenet.ipynb
+++ b/CUMT_iTraker/squeezenet.ipynb
@@ -19,7 +19,7 @@
     "# %load_ext autoreload\n",
     "# %autoreload 2\n",
     "# %reload_ext autoreload\n",
-    "\n",
+    "import pickle\n",
     "import tensorflow as tf\n",
     "import numpy as np\n",
     "from cumt_eye import Cumt_itraker\n",
@@ -166,6 +166,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "model.extract_network_weight('squeezenet_669.pkl')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": true
    },
    "outputs": [],
@@ -255,7 +266,9 @@
    "outputs": [],
    "source": [
     "saver=tf.train.Saver()\n",
-    "saver.restore(sess,r'D:\\Proj_DL\\Code\\Proj_EyeTraker\\Proj_iTraker\\CUMT_iTraker\\model_save\\SqueezeNet\\model_8437.ckpt-1020')"
+    "#model_984.ckpt-34925\n",
+    "#model_8437.ckpt-1020\n",
+    "saver.restore(sess,r'D:\\Proj_DL\\Code\\Proj_EyeTraker\\Proj_iTraker\\CUMT_iTraker\\model_save\\SqueezeNet\\model_984.ckpt-34925')"
    ]
   },
   {
@@ -273,8 +286,9 @@
    },
    "outputs": [],
    "source": [
+    "\n",
     "acc_lis=[]\n",
-    "for k in range(10):\n",
+    "for k in range(100):\n",
     "    mask=np.random.choice(val_data.shape[0],128,replace=False)\n",
     "    x_,y_=val_data[mask]-cumt_picmean,val_label[mask]\n",
     "    feed_dict={X:x_,Y:y_}\n",
@@ -288,25 +302,38 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "n=list(tf.trainable_variables())\n",
     "model_d={}\n",
     "for k in n:\n",
+    "    #变量名称\n",
     "    a=str(k).split(\"'\")[1][:-2]\n",
     "    print(a)\n",
-    "    name_a=a.split(r'/')[0]\n",
-    "    name_b=''\n",
-    "    for j in a.split(r'/')[1:]:\n",
-    "        name_b+=r'/'+j\n",
-    "    with tf.variable_scope(name_a,reuse=True):\n",
-    "        var=tf.get_variable(name_b[1:])\n",
+    "    with tf.variable_scope('',reuse=True):\n",
+    "        var=tf.get_variable(a)\n",
     "        model_d[a]=var.eval()\n",
-    "import pickle\n",
-    "fp=open('squeezenet_794.pkl','wb')\n",
+    "        print(tf.shape(var).eval())\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "list(model_d.keys())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fp=open('squeezenet_795.pkl','wb')\n",
     "pickle.dump(obj=model_d,file=fp)\n",
     "fp.close()"
    ]
