--- a/Transfer_iTraker/inceptionv3迁移学习_eyeandface.ipynb
+++ b/Transfer_iTraker/inceptionv3迁移学习_eyeandface.ipynb
@@ -1083,7 +1083,9 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "p=tf.nn.max_pool(a,ksize=[1,8,8,1],strides=[1,1,1,1],padding='SAME')\n",
@@ -1093,7 +1095,9 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "p_=sess.run(p)"
@@ -1136,7 +1140,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.3"
+   "version": "3.5.0"
   }
  },
  "nbformat": 4,
